Fixes odd inner spacing in IE

--- a/templates/assets/less/buttons.less
+++ b/templates/assets/less/buttons.less
@@ -2,6 +2,7 @@
     margin: 0;
     display: inline-block;
     position: relative;
+    overflow: visible;
     cursor: pointer;
     user-select: none;
     -webkit-user-drag: none;
